--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <meta name="author" content="xShadowBlade" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Uncomment the following line if you have a favicon -->
-    <!-- <link rel="icon" href="%PUBLIC_URL%favicon.ico" type="image/x-icon" /> -->
-    <title>Title</title>
+    <link rel="icon" href="%PUBLIC_URL%favicon.ico" type="image/x-icon" />
+    <title>Quantum Assembler</title>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
