Add grid resizing, data changes, experimental build config

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Uncomment the following line if you have a favicon -->
     <link rel="icon" href="%PUBLIC_URL%favicon.ico" type="image/x-icon" />
+    <!-- Uncomment the following and place this file to src/index.html if you use vite -->
+    <!-- <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <script defer src="./index.tsx" type="module"></script> -->
     <title>Quantum Assembler</title>
     <!--
       manifest.json provides metadata used when your web app is installed on a
