--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,11 @@
     <meta name="author" content="xShadowBlade" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Uncomment the following line if you have a favicon -->
-    <link rel="icon" href="%PUBLIC_URL%favicon.ico" type="image/x-icon" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%favicon.ico" type="image/x-icon" /> -->
     <!-- Uncomment the following and place this file to src/index.html if you use vite -->
-    <!-- <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-    <script defer src="./index.tsx" type="module"></script> -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="./index.css" />
+    <script defer src="./index.tsx" type="module"></script>
     <title>Quantum Assembler</title>
     <!--
       manifest.json provides metadata used when your web app is installed on a
